WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59727
-[WebPDFView menuForEvent:] leaks NSMenuItem objects
https://bugs.webkit.org/show_bug.cgi?id=59727
Summary
-[WebPDFView menuForEvent:] leaks NSMenuItem objects
David Kilzer (:ddkilzer)
Reported
2011-04-28 12:31:05 PDT
Created
attachment 91537
[details]
Patch Reviewed by NOBODY (OOPS!). * WebView/WebPDFView.mm: (-[WebPDFView menuForEvent:]): Call -autorelease after copying each NSMenuItem. Regressed in r9566. --- 2 files changed, 11 insertions(+), 1 deletions(-)
Attachments
Patch
(1.37 KB, patch)
2011-04-28 12:31 PDT
,
David Kilzer (:ddkilzer)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Review Bot
Comment 1
2011-04-28 12:34:06 PDT
Attachment 91537
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebKit/mac/ChangeLog', u'Source/Web..." exit_code: 1 Source/WebKit/mac/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Kilzer (:ddkilzer)
Comment 2
2011-04-28 12:45:37 PDT
(In reply to
comment #0
)
> Regressed in r9566.
<
http://trac.webkit.org/changeset/9566
>
David Kilzer (:ddkilzer)
Comment 3
2011-04-28 12:46:37 PDT
(In reply to
comment #2
)
> (In reply to
comment #0
) > > Regressed in r9566. > <
http://trac.webkit.org/changeset/9566
>
Bug 3711
!
Darin Adler
Comment 4
2011-04-28 12:48:24 PDT
Comment on
attachment 91537
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=91537&action=review
> Source/WebKit/mac/WebView/WebPDFView.mm:395 > + [menu addItem:[[menuItem copy] autorelease]];
It’s normally better to use release than autorelease. We could do that by adding a local variable.
David Kilzer (:ddkilzer)
Comment 5
2011-04-28 13:17:05 PDT
Committed
r85230
: <
http://trac.webkit.org/changeset/85230
>
David Kilzer (:ddkilzer)
Comment 6
2011-04-28 14:40:25 PDT
(In reply to
comment #4
)
> (From update of
attachment 91537
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=91537&action=review
> > > Source/WebKit/mac/WebView/WebPDFView.mm:395 > > + [menu addItem:[[menuItem copy] autorelease]]; > > It’s normally better to use release than autorelease. We could do that by adding a local variable.
Committed
r85237
: <
http://trac.webkit.org/changeset/85237
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug