<http://webkit.org/b/59727> -[WebPDFView menuForEvent:] leaks NSMenuItem objects

Reviewed by Dan Bernstein.

* WebView/WebPDFView.mm:
(-[WebPDFView menuForEvent:]): Call -autorelease after copying
each NSMenuItem.  Regressed in r9566 for Bug 3711.

Canonical link: https://commits.webkit.org/74941@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85230 268f45cc-cd09-0410-ab3c-d52691b4dbfc